FEAT: autenticação e login de usuario adicionados ao software com correção de bugs e documentação.
